--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: science
 Priority: optional
 Build-Depends: debhelper (>= 7)
 Build-Depends-Indep: perl, python
-Maintainer: Matthew Callaway <mcallawa@genome.wustl.edu>
+Maintainer: Fabio Vandin <vandinfa@cs.brown.edu> 
 Standards-Version: 3.8.3
 Homepage: http://compbio.cs.brown.edu/projects/hotnet/
 
